Fixing spacing due to overriding user agent fix

--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -11,6 +11,7 @@
 	overflow: visible;
 	line-height: 1.23em;
 	zoom: 1;
+	padding-left: 10px;
 }
 .portlet_head {
 	margin-bottom: 0.46em;
